<resources>
    <string name="app_name">Leevro</string>

    <string name="action_settings">Settings</string>
    <string name="action_barcode_scanner">Leitor de Código de Barras</string>
    <string name="action_book_transactions">Negociações de Livros</string>
    <string name="action_profile">Meu Perfil</string>
    <string name="action_my_book_gallery">Minha Biblioteca</string>
    <string name="action_confirm">Confirmar</string>
    <string name="action_book_add">Adicionar Livro</string>

    <string name="title_activity_book_add">Adicionar Livro</string>
    <string name="title_activity_book_propose">Cadastrar Livro</string>
    <string name="propose.explain">O livro correspondente a este ISBN ainda não foi cadastrado. Preencha as informações básicas e deixe o restante com a gente!</string>
    <string name="title_activity_book_galery">Minha Biblioteca</string>
    <string name="title_activity_book_detail">Detalhes do Livro</string>
    <string name="title_activity_friends">Amigos</string>
    <string name="title_activity_chat">Conversa</string>
    <string name="title_activity_public_profile">Minha Biblioteca</string>

    <string name="facebook_app_id">1507945116179784</string>
    <string name="title_activity_logout">Logout</string>
    <string name="title_activity_settings">Settings</string>

    <string name="action_example">Example action</string>
    <string name="title_activity_book_and_profile">Detalhes do Livro</string>
    <string name="title_activity_book_offer">BookOfferActivity</string>
    <string name="title_activity_book_transaction">Negociações de Livros</string>
    <string name="title_activity_my_profile">MyProfile</string>
    <string name="title_activity_barcode_scanner">BarcodeScannerActivity</string>

</resources>
