<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="leevro.pucpr.br.leevro19.MainActivity">

    <item
        android:id="@+id/action_profile"
        android:orderInCategory="1"
        android:title="@string/action_profile"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_my_book_gallery"
        android:orderInCategory="2"
        android:title="@string/action_my_book_gallery"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_book_transactions"
        android:orderInCategory="3"
        android:title="@string/action_book_transactions"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="99"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_book_add"
        android:orderInCategory="10"
        android:title="@string/action_book_add"
        app:showAsAction="never" />


</menu>
